--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
 }
 
 .header-light{
@@ -36,7 +37,7 @@
     margin-left: 10px;
 }
 
-.search-input{
+.search-container input{
     /* width: 40%; */
     border: 1px solid grey;
     padding: 8px;
